# DonMoni

./: CMakeLists.txt  README.md  currencies.cpp  currencies.h  filter.cpp  filter.h  main.cpp  mainthread.cpp  mainthread.h  monex.conf  money.cpp  money.h  parser.cpp  parser.h  payment.cpp  payment.h  printer.cpp  printer.h  project.cpp  project.h  recur.cpp  recur.h  settings.cpp  settings.h  tracker.cpp  tracker.h
config/: monex.conf
exceptions/: fileexception.h  networkexception.h  nopaymentsexception.cpp  nopaymentsexception.h
translations/: donmoni_en_US.ts  donmoni_pl_PL.ts  monex.en_US.ts  monex.pl_PL.ts  monex_en_US.ts  monex_pl_PL.ts
